# config-pyrser

./: .gitignore  README.md  pyproject.toml
config_pyrser/: __init__.py  fields.py  manager.py
tests/: conftest.py  test_fields.py  test_manager.py
tests/samples/: test_config.ini
