[tool.poetry]
name = "config-pyrser"
version = "0.1.0"
description = ""
authors = ["wadamek65 <wadamek65@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-cov = "^2.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
