[tool.poetry]
name = "config-pyrser"
version = "0.1.2"
description = ""
license = "MIT"
authors = ["wadamek65 <wadamek65@gmail.com>"]
maintainers = ["wadamek65 <wadamek65@gmail.com>"]
repository = "https://github.com/wadamek65/config-pyrser"

[tool.poetry.dependencies]
python = "^3.9 || ^3.10 || ^3.11 || ^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "8.0.0"
pytest-cov = "4.1.0"
pylint = "3.0.3"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
